--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/g6": "2.2.6",
     "antd": "^3.10.1",
     "g2": "^2.3.13",
     "g2-react": "^1.3.2",
