--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
-  "name": "ftree",
-  "version": "0.1.0",
+  "name": "family-tree",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.10.1",
-    "g2": "^2.3.13",
-    "g2-react": "^1.3.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5",
-    "whatwg-fetch": "^3.0.0"
+    "@ant-design/icons": "^5.2.6",
+    "ajv": "^8.17.1",
+    "antd": "^5.12.8",
+    "dagre": "^0.8.5",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "reactflow": "^11.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "vercel-build": "npm run build"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/dagre": "^0.7.52",
+    "@types/lodash": "^4.14.202"
+  }
 }
